tests/compile_fail/duplicate_keys.rs
use sorbe_tpl::config;

config! {
    DuplicateConfig => {
        server.host: String,
        server.host: u16,
    }
}

fn main() {}
