tests/compile_fail/duplicate_keys.stderr
error: Duplicate key found: 'server.host'
 --> tests/compile_fail/duplicate_keys.rs:3:1
  |
3 | / config! {
4 | |     DuplicateConfig => {
5 | |         server.host: String,
6 | |         server.host: u16,
7 | |     }
8 | | }
  | |_^
  |
  = note: this error originates in the macro `config` (in Nightly builds, run with -Z macro-backtrace for more info)
